# karlia-python-client

./: README.md  pyproject.toml
karlia/: client.py  interfaces.py
karlia_python_client/: client.py
tests/: conftest.py  test_client.py
tests/data/vcr_cassettes/: get_customer_by_email.yaml  get_customers.yaml
